# onyx

./: .gitignore  ANONYMITY.md  ANONYMITY_ROADMAP.md  CHANGELOG.md  CHANNELS.md  Cargo.toml  DESIGN-ASC.md  DESIGN.md  DISCOVERY.md  FEDERATION.md  FILES.md  HOW_IT_WORKS.md  INSTALL.md  README.md  RELEASES.md  ROADMAP.md  ROTATION.md  SECURITY.md  THREAT_MODEL.md  VANGUARDS_HANDOFF.md  deny.toml  hubs.json  onyx-state.db
.github/workflows/: ci.yml  release.yml
crates/onyx/: Cargo.toml
crates/onyx-core/: Cargo.toml  build.rs
crates/onyx-core/benches/: BASELINES.md  rooms.rs
crates/onyx-core/src/: api.rs  crypto.rs  error.rs  flows.rs  identity.rs  invite.rs  lib.rs  mls.rs  room.rs  routing.rs  storage.rs  tor.rs  transport.rs  wire.rs
crates/onyx-core/tests/: fuzz_no_panic.rs
crates/onyx-daemon/: Cargo.toml
crates/onyx-daemon/src/: api_server.rs  conversations.rs  files.rs  hub_client.rs  lib.rs  replay_guard.rs
crates/onyx-daemon/tests/: clearnet_guard.rs
crates/onyx-hub/: Cargo.toml
crates/onyx-hub/src/: handler.rs  lib.rs  main.rs  peer_link.rs  rate_limit.rs  state.rs  store.rs
crates/onyx-hub/tests/: rooms_smoke.rs
crates/onyx/src/: client.rs  main.rs  theme.rs  tui.rs
crates/onyxd/: Cargo.toml
crates/onyxd/src/: api_server.rs  conversations.rs  hub_client.rs  main.rs
scripts/: install.sh  local-hub-demo.sh  real_tor_smoke.sh
scripts/git-hooks/: README.md  pre-push
