[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Onyx contributors"]
repository = "https://github.com/albinvar/onyx"
license = "AGPL-3.0-or-later"

# Pinned in one place so every crate uses the same version.
# Higher-level crates (onyxd, onyx, onyx-hub) MUST NOT add raw crypto deps —
# all primitive use is funnelled through `onyx_core::crypto`.
[workspace.dependencies]
# Workspace-internal crates. Path + version means cargo resolves via path
# locally (no registry round-trip) while cargo-deny / crates.io see an
# explicit version constraint instead of a wildcard.
onyx-core = { path = "crates/onyx-core", version = "0.0.1" }

# External crypto primitives.
ed25519-dalek    = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek     = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
hkdf             = "0.12"
sha2             = "0.10"
blake2           = "0.10"
argon2           = "0.5"
# Post-quantum KEM (FIPS 203 ML-KEM-768), used in hybrid with X25519 — see crypto.rs.
ml-kem           = { version = "0.2", features = ["zeroize"] }
# Noise Protocol Framework — used for the transport-layer XK handshake.
# Pinned to the same release line WireGuard ecosystem uses.
snow             = "0.9"
# Local encrypted vault. `bundled` compiles SQLite from source so we don't
# depend on a system library version we can't control.
rusqlite         = { version = "0.39", features = ["bundled"] }
# Messaging Layer Security (RFC 9420) — group E2E encryption.
# We track the 0.8 line because the 0.6 line transitively pulls
# hpke-rs-rust-crypto 0.2 which has RUSTSEC-2026-0072 (missing all-zero
# X25519 shared-secret check). 0.8 pulls hpke-rs-rust-crypto 0.6+ which
# fixes it.
openmls          = "0.8"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits   = "0.5"

# Tor — outbound circuits + (later) hidden service publication.
# arti is a large dep set; bringing it in significantly bumps build time.
arti-client      = "0.42"
tor-rtcompat     = "0.42"

# Async runtime. Used by arti and by the daemon.
tokio            = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "fs", "time", "sync", "signal"] }
# Test-only.
tempfile         = "3"
rand_core        = { version = "0.6", features = ["getrandom"] }
zeroize          = { version = "1", features = ["derive"] }
subtle           = "2"
base32           = "0.5"
thiserror        = "2"

# Wire format: CBOR for the message envelope (DESIGN §5.4).
serde            = { version = "1", features = ["derive"] }
serde_bytes      = "0.11"
ciborium         = "0.2"

# Test-only.
proptest         = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic is noisy; selectively allow the ones we don't want
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Prose in doc comments mentions real proper nouns (Tor, SQLite, OpenMLS, etc.).
# Backticking every one would be noise; we'll backtick selectively in API docs.
doc_markdown = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
