[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Onyx contributors"]
repository = "https://github.com/albinvar/onyx"
license = "AGPL-3.0-or-later"

# Pinned in one place so every crate uses the same version.
# Higher-level crates (onyxd, onyx, onyx-hub) MUST NOT add raw crypto deps —
# all primitive use is funnelled through `onyx_core::crypto`.
[workspace.dependencies]
# Workspace-internal crates. Path + version means cargo resolves via path
# locally (no registry round-trip) while cargo-deny / crates.io see an
# explicit version constraint instead of a wildcard.
onyx-core   = { path = "crates/onyx-core",   version = "0.0.1" }
onyx-daemon = { path = "crates/onyx-daemon", version = "0.0.1" }

# External crypto primitives.
ed25519-dalek    = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek     = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
hkdf             = "0.12"
sha2             = "0.10"
blake2           = "0.10"
argon2           = "0.5"
# Post-quantum KEM (FIPS 203 ML-KEM-768), used in hybrid with X25519 — see crypto.rs.
ml-kem           = { version = "0.2", features = ["zeroize"] }
# Noise Protocol Framework — used for the transport-layer XK handshake.
# Pinned to the same release line WireGuard ecosystem uses.
snow             = "0.9"
# Local encrypted vault. `bundled` compiles SQLite from source so we don't
# depend on a system library version we can't control.
rusqlite         = { version = "0.39", features = ["bundled"] }
# Messaging Layer Security (RFC 9420) — group E2E encryption.
# We track the 0.8 line because the 0.6 line transitively pulls
# hpke-rs-rust-crypto 0.2 which has RUSTSEC-2026-0072 (missing all-zero
# X25519 shared-secret check). 0.8 pulls hpke-rs-rust-crypto 0.6+ which
# fixes it.
openmls          = "0.8"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits   = "0.5"

# Tor — outbound circuits + hidden service publication.
# arti is a large dep set; bringing it in significantly bumps build time.
# `onion-service-service` enables tor-hsservice + keymgr for HS publishing.
arti-client      = { version = "0.42", features = [
    "onion-service-service", # for publishing our v3 HS
    "onion-service-client",  # for dialing other peers' .onion addresses
    # A1.3: vanguards (guard-discovery defense). NOT in arti's default
    # feature set, and our published v3 HS is the surface most exposed
    # to guard-discovery attacks, so we MUST enable it explicitly.
    # Without this feature `VanguardMode` collapses to `Disabled` and
    # the HS runs with no L2/L3 guard layers — verified absent before
    # this change (cargo tree showed tor-guardmgr=default, no vanguards).
    # `tor.rs::bootstrap_with` then pins the mode to Full.
    "vanguards",
] }
tor-rtcompat     = "0.42"
tor-hsservice    = "0.42"
tor-hscrypto     = "0.42"
# A1.3: direct dep so we can name `VanguardMode` (arti-client only
# re-exports VanguardConfig/Builder, not the mode enum). Used to pin
# Full vanguards in tor.rs. The `vanguards` feature on arti-client
# already pulls this crate's vanguards code in transitively; we just
# need the type name in scope.
tor-guardmgr     = { version = "0.42", features = ["vanguards"] }
tor-config       = "0.42"
# Needed to construct the `Connected` relay-cell reply when accepting
# an inbound onion-service stream.
tor-cell         = "0.42"
# safelog gives us the `DisplayRedacted` trait we need to format an
# HsId as the user-facing `.onion` string (arti deliberately doesn't
# implement plain `Display` on HsId so accidental log statements don't
# leak the address).
safelog          = "0.8"

# Async runtime. Used by arti and by the daemon.
tokio            = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "net", "fs", "time", "sync", "signal"] }
# Stream / future utilities (drain the HS rend stream, etc).
futures          = "0.3"
# Structured logging for the daemon.
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# CLI argument parsing for binaries.
clap             = { version = "4", features = ["derive", "env"] }
anyhow           = "1"
# Test-only.
tempfile         = "3"
rand_core        = { version = "0.6", features = ["getrandom"] }
zeroize          = { version = "1", features = ["derive"] }
subtle           = "2"
base32           = "0.5"
base64           = "0.22"
thiserror        = "2"

# Wire format: CBOR for the message envelope (DESIGN §5.4).
serde            = { version = "1", features = ["derive"] }
serde_bytes      = "0.11"
ciborium         = "0.2"
# JSON only for the local API socket (onyx CLI ↔ onyxd). Never on
# the wire between hosts — that's CBOR over Noise.
serde_json       = "1"

# Test-only.
proptest         = "1"
# Benchmark-only. Used by `benches/` under onyx-core (Infra.4: N-member
# room perf measurements). `html_reports` adds the criterion HTML output
# under `target/criterion/`.
criterion        = { version = "0.5", features = ["html_reports"] }

# T-files.c: image decoding + re-encoding for metadata stripping.
# Default features include JPEG/PNG/GIF/WebP/TIFF/BMP support;
# we explicitly enable only the ones we strip-via-re-encode for to
# avoid bloating the binary with formats we don't intentionally
# support. HEIC/AVIF stay off (libheif is LGPL + patent-encumbered;
# operator must convert to JPEG before sending).
image            = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "bmp", "gif"] }

# T-files.c: magic-byte MIME sniffing — small, well-audited,
# no_std-compatible. We always sniff from content; the sender's
# claimed MIME is hint-only on the receive side (FILES.md §3.3).
infer            = { version = "0.16", default-features = false }

# TUI for the `onyx` CLI client. Crossterm is ratatui's default
# backend on macOS/Linux/Windows.
ratatui          = "0.30"
crossterm        = "0.29"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic is noisy; selectively allow the ones we don't want
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Prose in doc comments mentions real proper nouns (Tor, SQLite, OpenMLS, etc.).
# Backticking every one would be noise; we'll backtick selectively in API docs.
doc_markdown = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
