[package]
name = "onyx-daemon"
description = "Onyx daemon as a library — shared between the standalone `onyxd` binary and the all-in-one `onyx` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "onyx_daemon"

[dependencies]
onyx-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
serde_bytes = { workspace = true }
zeroize = { workspace = true }
# T-files.c: image decode + re-encode for metadata stripping.
image = { workspace = true }
# T-files.c: content-based MIME sniffing (FILES.md §3.3).
infer = { workspace = true }

[lints]
workspace = true
