[package]
name = "onyx-hub"
description = "Onyx hub — optional relay that stores encrypted offline queues and hosts MLS-encrypted rooms. Sees no plaintext."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "onyx_hub"
path = "src/lib.rs"

[[bin]]
name = "onyx-hub"
path = "src/main.rs"

[dependencies]
onyx-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
base32 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
onyx-daemon = { workspace = true }
zeroize = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
