[package]
name = "onyx"
description = "Onyx CLI/TUI client — the reference interface against which security guarantees are validated."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "onyx"
path = "src/main.rs"

[dependencies]
onyx-core = { workspace = true }
onyx-daemon = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[lints]
workspace = true
