[package]
name = "onyxd"
description = "Onyx daemon — headless long-running per-user process that owns identity, MLS state, and Tor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "onyxd"
path = "src/main.rs"

[dependencies]
onyx-core = { workspace = true }
onyx-daemon = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
